--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [flake8-bugbear]
+        args: [--config=pyproject.toml]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.19.1
