--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,21 @@ services:
       - "8000:8000"
     environment:
       PYTHONUNBUFFERED: 1
+      APP_DATABASE_URL: "sqlite:///./app.db"
     restart: unless-stopped
     networks:
       - python-image-modification-net
 
-  python-backround-modification-validation:
+  python-background-validator:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: python-backround-modification-validation
+    container_name: python-background-validator
+    depends_on:
+      - python-image-modification
     environment:
       PYTHONUNBUFFERED: 1
+      APP_API_ENDPOINT: "http://python-image-modification:8000"
     command: ["python", "-m", "app.services.background_validator"]
     restart: unless-stopped
     networks:
